# Bazinga-Encryption

./: .gitignore  App.xaml  App.xaml.cs  Bazinga-Encryption.sln  MainWindow.xaml  MainWindow.xaml.cs  README.md  encryptionTool.csproj  encryptionTool.csproj.lscache
bazingaDlls/: Cargo.toml
bazingaDlls/src/: lib.rs  tempCodeRunnerFile.rs
