[package]
name = "bazingaDlls"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
dotenvy = "0.15"
walkdir = "2"
public-ip = "0.2"
chacha20poly1305 = "0.10"
base64 = "0.22"

[lib]
crate-type = ["cdylib"]
